syntax = "proto3";

package pb;

option java_package = "com.zhigui.crossmesh.proto";

import "google/protobuf/timestamp.proto";

message Lock {
    TransactionID primary_prepare_tx_id = 1;
    bytes prev_state = 2;
    bytes updating_state = 3;
}

message GlobalTransaction {
    TransactionID primary_prepare_tx_id = 1;
    BranchTransaction primary_commit_tx = 2;
    BranchTransaction primary_rollback_tx = 3;
    repeated BranchTransaction branch_prepare_txs = 4;
    repeated BranchTransaction branch_commit_txs = 5;
    repeated BranchTransaction branch_rollback_txs = 6;
    uint64 ttl_height = 7;
    google.protobuf.Timestamp ttl_time = 8;
}

message Invocation {
    string contract = 1;
    string func = 2;
    repeated string args = 3;
}

message BranchTransaction {
    URI uri = 1;
    Invocation invocation = 2;
}

message BranchTransactionResponse {
    TransactionID tx_id = 1;
    enum Status {
        SUCCESS = 0;
        FAILED = 1;
    }
    Status status = 2;
    bytes proof = 3;
}

enum ChainType {
    FABRIC = 0;
    XUPERCHAIN = 1;
    BCOS = 2;
}

enum GlobalTransactionStatusType {
    PRIMARY_TRANSACTION_PREPARED = 0;
    PRIMARY_TRANSACTION_COMMITTED = 1;
    PRIMARY_TRANSACTION_CANCELED = 2;
}

message PrimaryLockMeta {
    string xid = 1;
    string chain = 2;
}

message URI {
    string network = 1;
    string chain = 2;
}

message TransactionID {
    URI uri = 1;
    string id = 2;
}

message PrimaryTransactionPreparedEvent {
    TransactionID primary_prepare_tx_id = 1;

    BranchTransaction primary_commit_tx = 2;
    BranchTransaction primary_rollback_tx = 3;
    Invocation global_tx_status_query = 4;
    repeated BranchTransaction branch_prepare_txs = 5;
}

message PrimaryTransactionConfirmedEvent {
    TransactionID primary_confirm_tx_id = 1;
    repeated BranchTransaction branch_commit_or_rollback_txs = 2;
}

message BranchTransactionPreparedEvent {
    TransactionID primary_prepare_tx_id = 1;
    Invocation global_tx_status_query = 2;
    BranchTransaction commit_tx = 3;
    BranchTransaction rollback_tx = 4;
}

message GlobalTransactionStatus {
    TransactionID primary_prepare_tx_id = 1;
    GlobalTransactionStatusType status = 2;
    TransactionID primary_confirm_tx_id = 3;
}

message VerifyInfo {
    string Contract = 1;
    string function = 2;
}

message ResourceRegisteredOrUpdatedEvent {
    URI uri = 1;
    bytes connection = 2;
    ChainType type = 3;
}
